--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-      "start": "node server.js",
-      "server": "nodemon server.js",
-      "client": "npm start --prefix client",
-      "dev": "concurrently \"npm run server\" \"npm run client\""
+        "start": "node server.js",
+        "server": "nodemon server.js",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "body-parser": "^1.19.0",
-      "concurrently": "^5.0.0",
-      "express": "^4.17.1",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose": "^5.9.1",
-      "config": "^3.2.6"
+        "axios": "^1.7.2",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "concurrently": "^5.0.0",
+        "config": "^3.2.6",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.9.1"
     },
     "devDependencies": {
-      "nodemon": "^2.0.2"
+        "nodemon": "^2.0.2"
     }
-  }
-  
+}
