--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "concurrently": "^5.0.0",
-        "config": "^3.2.6",
+        "config": "^3.3.12",
         "express": "^4.17.1",
+        "express-validator": "^7.1.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.9.1"
+        "mongoose": "^5.9.1",
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.14"
     },
     "devDependencies": {
         "nodemon": "^2.0.2"
