--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "freelance-platform",
+    "name": "houb_freelance-platform",
     "version": "1.0.0",
+    "type": "module",
     "main": "index.js",
     "scripts": {
         "start": "node server.js",
@@ -19,7 +20,10 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.1",
         "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.9.14"
+        "nodemailer": "^6.9.14",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "serve-static": "^1.15.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.2"
