--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,7 @@
 {
     "name": "houb-frontend",
     "version": "1.0.0",
+    "type": "module",
     "description": "Frontend of the HOUB platform.",
     "main": "./index.js",
     "scripts": {
@@ -18,14 +19,14 @@
     "author": "Gladius33",
     "license": "MIT",
     "dependencies": {
+        "@reduxjs/toolkit": "^2.2.7",
         "axios": "^1.2.0",
         "html-webpack-plugin": "^5.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-redux": "^8.1.1",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.8.0",
-        "react-toastify": "^9.0.0",
-        "redux": "^4.2.1"
+        "react-toastify": "^9.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.12",
@@ -36,6 +37,7 @@
         "eslint": "^8.34.0",
         "jest": "^29.3.1",
         "style-loader": "^3.3.1",
+        "styled-components": "^6.1.12",
         "webpack": "^5.76.1",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.13.1"
