--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "body-parser": "^1.19.0",
         "concurrently": "^5.0.0",
         "config": "^3.3.12",
+        "cookie-parser": "^1.4.6",
+        "cookies-next": "^4.2.1",
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "express-validator": "^7.1.0",
