--- a/src/package.json
+++ b/src/package.json
@@ -21,12 +21,14 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.7",
         "axios": "^1.2.0",
+        "cookies-next": "^4.2.1",
         "html-webpack-plugin": "^5.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.8.0",
-        "react-toastify": "^9.0.0"
+        "react-toastify": "^9.0.0",
+        "redux": "^5.0.1"
     },
     "devDependencies": {
         "@babel/core": "^7.20.12",
