--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "mongoose": "^5.9.1",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.14",
+        "null-loader": "^4.0.1",
+        "process": "^0.11.10",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^15.0.0",
