--- a/src/package.json
+++ b/src/package.json
@@ -19,29 +19,39 @@
     "author": "Gladius33",
     "license": "MIT",
     "dependencies": {
-        "@reduxjs/toolkit": "^2.2.7",
+        "@babel/plugin-transform-runtime": "^7.25.9",
+        "@reduxjs/toolkit": "^2.4.0",
+        "assert": "^2.1.0",
         "axios": "^1.2.0",
+        "browserify": "^17.0.0",
+        "buffer": "^6.0.3",
         "cookies-next": "^4.2.1",
-        "html-webpack-plugin": "^5.6.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "crypto-browserify": "^3.12.1",
+        "html-webpack-plugin": "^5.6.3",
+        "jsonwebtoken": "^9.0.2",
+        "process": "^0.11.10",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.8.0",
         "react-toastify": "^9.0.0",
-        "redux": "^5.0.1"
+        "redux": "^5.0.1",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "util": "^0.12.5"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.12",
-        "@babel/preset-env": "^7.20.0",
-        "@babel/preset-react": "^7.18.6",
-        "babel-loader": "^8.2.5",
-        "css-loader": "^6.7.1",
+        "@babel/core": "^7.26.0",
+        "@babel/preset-env": "^7.26.0",
+        "@babel/preset-react": "^7.25.9",
+        "babel-loader": "^8.4.1",
+        "css-loader": "^6.11.0",
         "eslint": "^8.34.0",
         "jest": "^29.3.1",
-        "style-loader": "^3.3.1",
+        "style-loader": "^3.3.4",
         "styled-components": "^6.1.12",
-        "webpack": "^5.76.1",
+        "webpack": "^5.96.1",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.13.1"
+        "webpack-dev-server": "^4.15.2"
     }
 }
